--- a/layouts/_partials/home/author-section.html
+++ b/layouts/_partials/home/author-section.html
@@ -3,6 +3,7 @@
 {{ $author := .Params.author | default site.Params.author }}
 
 {{ if $author }}
+  {{ $authorName := or (T $author.name) $author.name | default site.Title }}
   <section class="author-section mb-12">
     <div class="bg-card border-border rounded-xl border p-8 shadow-sm">
       <div
@@ -12,13 +13,13 @@
           {{ if $author.avatar }}
             <img
               src="{{ $author.avatar }}"
-              alt="{{ or (T $author.name) $author.name | default site.Title }}"
+              alt="{{ $authorName }}"
               class="border-primary/20 h-24 w-24 rounded-full border-4 object-cover shadow-lg" />
           {{ else }}
             <!-- 默认头像：使用作者姓名首字母 -->
             <div
               class="bg-primary text-primary-foreground flex h-24 w-24 items-center justify-center rounded-full text-2xl font-bold shadow-lg">
-              {{ substr (or (T $author.name) $author.name | default site.Title) 0 1 | upper }}
+              {{ substr $authorName 0 1 | upper }}
             </div>
           {{ end }}
         </div>
@@ -26,7 +27,7 @@
         <!-- 作者信息 -->
         <div class="min-w-0 flex-1">
           <h1 class="text-foreground mb-2 text-3xl font-bold">
-            {{ or (T $author.name) $author.name | default site.Title }}
+            {{ $authorName }}
           </h1>
 
           {{ if $author.title }}
